<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:id="@+id/rootView"
    android:focusableInTouchMode="true"
  >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clipToPadding="false"
        android:paddingBottom="50dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="10dp"
                        android:text="LOGIN"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="43dp"
                    android:layout_marginRight="43dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Username">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="Password"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/loading"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnSignin"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_button_blue"
                        android:text="SIGN IN"
                        android:textColor="#fff" />




                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </ScrollView>

</RelativeLayout>