<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="info.blogbasbas.logintesting.ui.MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <android.support.design.widget.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        app:tabTextColor="@android:color/white">

    </android.support.design.widget.TabLayout>
    <android.support.v4.view.ViewPager
        android:layout_below="@id/tab"
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v4.view.ViewPager>


    </RelativeLayout>

