...
                android:layout_weight="1"
                android:gravity="left"
                android:text="Subcribtion Id :"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtSubcriptionId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textSize="17sp" />

...
