<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="6dp">

    <LinearLayout
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="Name :"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Name"
                android:textSize="17sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:text="Email :"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="17sp"
                android:layout_weight="1"
                android:text="Email"
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="School :"
                android:textSize="17sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="17sp"
            android:layout_weight="1"
                android:text="School"
                android:id="@+id/txtSchool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:textSize="17sp"
                android:text="Class Name :"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="17sp"
            android:layout_weight="1"
                android:text="Class Name"
                android:id="@+id/txtClassName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>



    </LinearLayout>
</android.support.v7.widget.CardView>